# Sapphire-Mod-Template

./: .clang-format.default  .clangd.default  .gitignore  CMakeLists.txt  README.md  manifest.json.in
cmake/: FindOrFetchSapphire.cmake
src/: Entry.cpp  MyMod.cpp  MyMod.h
